Team names, turns, wizard nerf

--- a/www/assets/style.css
+++ b/www/assets/style.css
@@ -3,7 +3,7 @@ body {
   }
 
 #gameContainer{
-    cursor: url(assets/images/cursor.png) 10 10,crosshair;
+    cursor: url(images/cursor.png) 10 10,crosshair;
 }
 
 canvas {
